# phishing-pro-v

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml  render.yaml  requirements.txt
backend/: config.py  database.py  main.py
backend/api/: routes_ai.py  routes_gateway.py  routes_history.py  routes_intel.py  routes_scan.py  routes_settings.py
backend/engine/: auth_checker.py  content_analyzer.py  header_analyzer.py  ml_analyzer.py  risk_scorer.py  url_analyzer.py
backend/models/: schemas.py
backend/services/: ai_analysis_service.py  domain_reputation_service.py  email_parser.py  gateway_service.py  openphish_service.py  phishtank_service.py  scanner_service.py  virustotal_service.py
frontend/: index.html
frontend/assets/: .gitkeep
frontend/css/: styles.css
frontend/js/: api.js  app.js  dashboard.js  gateway.js  history.js  scanner.js  settings.js  threat_intel.js
tests/: sample_clean.eml  sample_phishing.eml  test_api.py
