[project]
name = "phishing-pro"
version = "1.0.0"
description = "PhishingPro — Multi-layered email phishing detector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
    "extract-msg>=0.48.0",
    "beautifulsoup4>=4.12.0",
    "dnspython>=2.6.0",
    "checkdmarc>=5.3.0",
    "dkimpy>=1.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-whois>=0.9.6",
    "openai>=1.30.0",
    "cryptography>=42.0.0",
    "google-generativeai>=0.7.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=5.10.2",
    "torch>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
